--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Courier New", monospace;
+}
+
+.App {
+  background-image: url('./assets/rains.jpg');
+  background-size: cover;
+  background-position: bottom;
+}
+
+main {
+  min-height: 100vh;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2)), rgba(0, 0, 0, 0.75);
+  padding: 25px;
+}
+
+.search-box {
+  width: 100%;
+  margin: 0 auto 75px;
+}
+
+.search-box .search-bar {
+  display: auto;
+  width: 50%;
+  padding: 15px;
+
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
+  font-family: 'Courier New', monospace;
+  font-style: italic;
+
+  background-color: rgba(220, 228, 233, 0.75);
+  margin-top: -25px; 
+  
+  box-shadow: 0px 2px 5px rgb(92, 92, 92);
+}
+
+.location-box .location {
+  font-size: 30px;
+  font-weight: 150;
+  text-shadow: 1px 1px 1px rgb(92, 92, 92);
+}
+
+.location-box .date {
+  font-size: 150px;
+  font-weight: 150;
+  text-shadow: 1px 1px 1px rgb(92, 92, 92);
+}
+
+.rain .rain-true {
+  font-size: 30px;
+  font-weight: 150;
+  margin: 30px auto;
+  padding: 50px 25px;
+}
+
+.rain .rain-false {
+  font-size: 30px;
+  font-weight: 150;
+  margin: 20px auto;
+  padding: 30px 25px;
 }
