--- a/src/index.css
+++ b/src/index.css
@@ -50,21 +50,23 @@ main {
 }
 
 .location-box .date {
-  font-size: 150px;
-  font-weight: 150;
-  text-shadow: 1px 1px 1px rgb(92, 92, 92);
+  font-size: 20px;
+  font-weight: 50;
+  text-shadow: 1px 1px 1px rgb(126, 126, 126);
 }
 
-.rain .rain-true {
+.rains .rain-true {
   font-size: 30px;
   font-weight: 150;
   margin: 30px auto;
   padding: 50px 25px;
+  text-shadow: 1px 1px 1px rgb(126, 126, 126);
 }
 
-.rain .rain-false {
+.rains .rain-false {
   font-size: 30px;
   font-weight: 150;
   margin: 20px auto;
   padding: 30px 25px;
+  text-shadow: 1px 1px 1px rgb(126, 126, 126);
 }
