--- a/packages/app/src/index.css
+++ b/packages/app/src/index.css
@@ -41,6 +41,12 @@ main {
   margin-top: -25px; 
   
   box-shadow: 0px 2px 5px rgb(92, 92, 92);
+
+  -moz-animation: fadein 0.5s; /* Firefox < 16 */
+  -ms-animation: fadein 0.5s; /* Internet Explorer */
+  -o-animation: fadein 0.5s; /* Opera < 12.1 */
+  -webkit-animation: fadein 0.5s; /* Safari, Chrome and Opera > 12.1 */
+  animation: fadein 0.5s;
 }
 
 .location-box .location {
@@ -55,9 +61,13 @@ main {
   text-shadow: 1px 1px 1px rgb(126, 126, 126);
 }
 
+.rains-container {
+  opacity: 0.7;
+}
+
 .rains {
   background-color: rgb(193, 211, 223);
-  opacity: 0.5;  
+  opacity: 1;  
   -moz-animation: fadein 0.5s; /* Firefox < 16 */
   -ms-animation: fadein 0.5s; /* Internet Explorer */
   -o-animation: fadein 0.5s; /* Opera < 12.1 */
@@ -78,7 +88,7 @@ main {
     opacity: 0;
   }
   to {
-    opacity: 0.5;
+    opacity: 1;
   }
 }
 
@@ -88,7 +98,7 @@ main {
     opacity: 0;
   }
   to {
-    opacity: 0.5;
+    opacity: 1;
   }
 }
 
@@ -98,7 +108,7 @@ main {
     opacity: 0;
   }
   to {
-    opacity: 0.5;
+    opacity: 1;
   }
 }
 
@@ -108,7 +118,7 @@ main {
     opacity: 0;
   }
   to {
-    opacity: 0.5;
+    opacity: 1;
   }
 }
 
@@ -118,6 +128,6 @@ main {
     opacity: 0;
   }
   to {
-    opacity: 0.5;
+    opacity: 1;
   }
 }
